// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiCheckbox is rendered 1`] = `
<div
  class="ouiCheckbox ouiCheckbox--noLabel testClass1 testClass2"
>
  <input
    aria-label="aria-label"
    class="ouiCheckbox__input"
    data-test-subj="test subject string"
    id="id"
    type="checkbox"
  />
  <div
    class="ouiCheckbox__square"
  />
</div>
`;

exports[`OuiCheckbox props check is rendered 1`] = `
<div
  class="ouiCheckbox ouiCheckbox--noLabel"
>
  <input
    checked=""
    class="ouiCheckbox__input"
    id="id"
    type="checkbox"
  />
  <div
    class="ouiCheckbox__square"
  />
</div>
`;

exports[`OuiCheckbox props disabled disabled is rendered 1`] = `
<div
  class="ouiCheckbox ouiCheckbox--noLabel"
>
  <input
    class="ouiCheckbox__input"
    disabled=""
    id="id"
    type="checkbox"
  />
  <div
    class="ouiCheckbox__square"
  />
</div>
`;

exports[`OuiCheckbox props label is rendered 1`] = `
<div
  class="ouiCheckbox"
>
  <input
    class="ouiCheckbox__input"
    id="id"
    type="checkbox"
  />
  <div
    class="ouiCheckbox__square"
  />
  <label
    class="ouiCheckbox__label"
    for="id"
  >
    <span>
      Label
    </span>
  </label>
</div>
`;

exports[`OuiCheckbox props labelProps is rendered 1`] = `
<div
  class="ouiCheckbox"
>
  <input
    class="ouiCheckbox__input"
    id="id"
    type="checkbox"
  />
  <div
    class="ouiCheckbox__square"
  />
  <label
    aria-label="aria-label"
    class="ouiCheckbox__label testClass1 testClass2"
    data-test-subj="test subject string"
    for="id"
  >
    Label
  </label>
</div>
`;

exports[`OuiCheckbox props type inList is rendered 1`] = `
<div
  class="ouiCheckbox ouiCheckbox--inList ouiCheckbox--noLabel"
>
  <input
    class="ouiCheckbox__input"
    id="id"
    type="checkbox"
  />
  <div
    class="ouiCheckbox__square"
  />
</div>
`;
